--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
+    "date-fns": "^2.29.2",
     "eslint": "^8.23.0",
     "eslint-plugin-react": "^7.31.8",
     "vitest": "^0.23.2"
